--- a/public/pages/projectdetails.html
+++ b/public/pages/projectdetails.html
@@ -114,8 +114,62 @@
         </div>
       </nav>
 
+      <!-- Display side navbar on left vertically -->
+      <nav
+        aria-label="left side navigation"
+        class="bg-body-emphasis left-sticky-nav d-none d-lg-flex flex-column align-items-lg-start"
+      >
+        <ul>
+          <li class="bg-primary-subtle text-primary">
+            <a class="" href="#settings-offcanvas" data-bs-toggle="offcanvas" aria-label="Customize">
+              <span class=""
+                ><span class="position-relative ripple fa-spin d-flex flex-center"
+                  ><span class="icon-spin d-flex flex-center">
+                    <svg
+                      width="1.2rem"
+                      height="1.2rem"
+                      viewBox="0 0 20 20"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M19.7369 12.3941L19.1989 12.1065C18.4459 11.7041 18.0843 10.8487 18.0843 9.99495C18.0843 9.14118 18.4459 8.28582 19.1989 7.88336L19.7369 7.59581C19.9474 7.47484 20.0316 7.23291 19.9474 7.03131C19.4842 5.57973 18.6843 4.28943 17.6738 3.20075C17.5053 3.03946 17.2527 2.99914 17.0422 3.12011L16.393 3.46714C15.6883 3.84379 14.8377 3.74529 14.1476 3.3427C14.0988 3.31422 14.0496 3.28621 14.0002 3.25868C13.2568 2.84453 12.7055 2.10629 12.7055 1.25525V0.70081C12.7055 0.499202 12.5371 0.297594 12.2845 0.257272C10.7266 -0.105622 9.16879 -0.0653007 7.69516 0.257272C7.44254 0.297594 7.31623 0.499202 7.31623 0.70081V1.23474C7.31623 2.09575 6.74999 2.8362 5.99824 3.25599C5.95774 3.27861 5.91747 3.30159 5.87744 3.32493C5.15643 3.74527 4.26453 3.85902 3.53534 3.45302L2.93743 3.12011C2.72691 2.99914 2.47429 3.03946 2.30587 3.20075C1.29538 4.28943 0.495411 5.57973 0.0322686 7.03131C-0.051939 7.23291 0.0322686 7.47484 0.242788 7.59581L0.784376 7.8853C1.54166 8.29007 1.92694 9.13627 1.92694 9.99495C1.92694 10.8536 1.54166 11.6998 0.784375 12.1046L0.242788 12.3941C0.0322686 12.515 -0.051939 12.757 0.0322686 12.9586C0.495411 14.4102 1.29538 15.7005 2.30587 16.7891C2.47429 16.9504 2.72691 16.9907 2.93743 16.8698L3.58669 16.5227C4.29133 16.1461 5.14131 16.2457 5.8331 16.6455C5.88713 16.6767 5.94159 16.7074 5.99648 16.7375C6.75162 17.1511 7.31623 17.8941 7.31623 18.7552V19.2891C7.31623 19.4425 7.41373 19.5959 7.55309 19.696C7.64066 19.7589 7.74815 19.7843 7.85406 19.8046C9.35884 20.0925 10.8609 20.0456 12.2845 19.7729C12.5371 19.6923 12.7055 19.4907 12.7055 19.2891V18.7346C12.7055 17.8836 13.2568 17.1454 14.0002 16.7312C14.0496 16.7037 14.0988 16.6757 14.1476 16.6472C14.8377 16.2446 15.6883 16.1461 16.393 16.5227L17.0422 16.8698C17.2527 16.9907 17.5053 16.9504 17.6738 16.7891C18.7264 15.7005 19.4842 14.4102 19.9895 12.9586C20.0316 12.757 19.9474 12.515 19.7369 12.3941ZM10.0109 13.2005C8.1162 13.2005 6.64257 11.7893 6.64257 9.97478C6.64257 8.20063 8.1162 6.74905 10.0109 6.74905C11.8634 6.74905 13.3792 8.20063 13.3792 9.97478C13.3792 11.7893 11.8634 13.2005 10.0109 13.2005Z"
+                        fill="#2A7BE4"
+                      ></path></svg></span></span
+              ></span>
+              Customize
+            </a>
+          </li>
+
+          <li class="bg-primary-subtle">
+            <a href="#">
+              <span class="fas fa-dollar-sign fs-8"></span>
+              Price
+            </a>
+          </li>
+          <li class="bg-primary-subtle text-primary">
+            <a href="#">
+              <span class="far fa-calendar-alt fs-8"></span>
+              Calendar
+            </a>
+          </li>
+          <li class="bg-primary-subtle text-primary">
+            <a href="#">
+              <span class="far fa-envelope fs-8"></span>
+              Inbox
+            </a>
+          </li>
+          <li class="bg-primary-subtle text-primary">
+            <a href="#">
+              <span class="fas fa-cog fs-8"></span>
+              Settings
+            </a>
+          </li>
+        </ul>
+      </nav>
+
       <!-- TODO: -->
-      <div class="container" data-layout="container">
+      <div class="container page-container" data-layout="container">
         <script>
           var isFluid = JSON.parse(localStorage.getItem('isFluid'));
           if (isFluid) {
@@ -131,7 +185,6 @@
         <!--    Navbar-->
         <!-- ===============================================-->
         <div class="content">
-          <!-- TODO: -->
           <div class="row">
             <nav class="navbar navbar-light navbar-glass navbar-top navbar-expand-lg navbar-overrides">
               <button
@@ -845,7 +898,7 @@
               </ul>
             </nav>
             <!-- For mobile, display the list horizontally -->
-            <div class="foobar col-3 d-block d-md-none d-lg-none">
+            <div class="col-3 d-block d-md-none d-lg-none">
               <div
                 id="list-example-mobile"
                 class="list-group d-flex flex-row align-items-center justify-content-center fixed-top"
@@ -2454,12 +2507,12 @@
                             style="border: none"
                             aria-labelledby="PDF Preview"
                             title="PDF Preview"
-                            onerror="handlePDFError(this)"
+                            onerror="event.stopPropagation();event.preventDefault();handlePDFError(this)"
                           >
-                                      <p>
-                                          Your browser does not support PDFs.
-                                          <a href="../assets/docs/dummy-file.pdf">Download the PDF</a>
-                                       </p>
+                            <p>
+                              Your browser does not support PDFs.
+                              <a href="../assets/docs/dummy-file.pdf">Download the PDF</a>
+                            </p>
                           </object>
                         </div>
 
@@ -3813,7 +3866,7 @@
         </div>
       </div>
     </div>
-    <a class="card setting-toggle" href="#settings-offcanvas" data-bs-toggle="offcanvas">
+    <a class="card setting-toggle d-lg-none" href="#settings-offcanvas" data-bs-toggle="offcanvas">
       <div class="card-body d-flex align-items-center py-md-2 px-2 py-1">
         <div class="bg-primary-subtle position-relative rounded-start" style="height: 34px; width: 28px">
           <div class="settings-popover">
@@ -4382,25 +4435,29 @@
        *              in a new browser tab, providing a seamless fallback mechanism.
        */
       function handlePDFError(objectElement) {
-        const pdfPath = objectElement.getAttribute('data');
-        const glightBtn = document.querySelector('.gcontainer .gclose.gbtn');
-        console.log(glightBtn);
-        console.log(pdfPath);
-
-        // Close the lightbox
-        if (glightBtn) {
-          glightBtn.click();
+        return;
+        // Check if the error occurred in the CURRENT slide
+        const parentSlide = objectElement.closest('.gslide');
+        const childObject = parentSlide.querySelector('div#pdfDisplay');
+        if (!childObject && (!parentSlide || !parentSlide.classList.contains('current'))) {
+          console.log('Ignoring error from non-active slide');
+          return; // Exit if not in active slide
         }
 
-        // Use setTimeout to allow the click event to process, bypassing the popup blocker
-        setTimeout(() => {
-          if (pdfPath) {
-            console.log('Opening PDF in new tab');
+        const pdfPath = objectElement.getAttribute('data');
+        const glightBtn = document.querySelector('.gcontainer .gclose.gbtn');
+
+        // Close lightbox
+        if (glightBtn) glightBtn.click();
+
+        // Open PDF only if in active slide and path ends with .pdf
+        if (pdfPath && pdfPath.toLowerCase().endsWith('.pdf')) {
+          setTimeout(() => {
             window.open(pdfPath, '_blank');
-          } else {
-            console.error('No PDF path found');
-          }
-        }, 100); // Small delay to tie the open to the user action
+          }, 100);
+        } else {
+          console.error('Invalid PDF path:', pdfPath);
+        }
       }
     </script>
 
