style: border radius to 6px and change slider icon to resolve icon conflict

--- a/public/pages/projectdetails.html
+++ b/public/pages/projectdetails.html
@@ -161,7 +161,7 @@
           </li>
           <li class="bg-primary-subtle text-primary">
             <a href="#">
-              <span class="fas fa-cog fs-8"></span>
+              <span class="fas fa-sliders-h fs-8"></span>
               Settings
             </a>
           </li>
