refactor: changing div class from page-container to page-wrapper to resolve conflict

--- a/public/pages/projectdetails.html
+++ b/public/pages/projectdetails.html
@@ -80,7 +80,7 @@
     </label>
 
     <!-- the wrapper for the page content  -->
-    <div id="page-wrapper" class="page-container">
+    <div id="page-wrapper" class="page-wrapper">
       <!-- ===============================================-->
       <!--    Main Content-->
       <!-- ===============================================-->
