refactor: change name for left nav class to left-nav-bar instead of left-sticky-nav

--- a/public/pages/projectdetails.html
+++ b/public/pages/projectdetails.html
@@ -3622,7 +3622,7 @@
       <!-- class="bg-body-emphasis left-sticky-nav d-none d-lg-flex flex-column align-items-lg-start" -->
       <nav
         id="left-nav-bar"
-        class="bg-body-emphasis left-sticky-nav d-none d-lg-flex flex-column align-items-lg-start"
+        class="bg-body-emphasis left-nav-bar d-none d-lg-flex flex-column align-items-lg-start"
         aria-label="left side navigation"
       >
         <ul>
