refactor: changing all id in css to its corresponding class

--- a/public/pages/adduser.html
+++ b/public/pages/adduser.html
@@ -447,7 +447,7 @@
 
       <!-- User Role Search -->
       <div class="form-floating mb-3">
-        <input class="form-control" id="userRoleSearch" list="userRoleList" placeholder="Start typing a parent..." required />
+        <input class="form-control user-role-search" id="userRoleSearch" list="userRoleList" placeholder="Start typing a parent..." required />
         <label for="userRoleSearch">User Role</label>
         <datalist id="userRoleList">
           <option value="User Role 1"></option>
